--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   </div>
   <div id="leftSide">
     <div id="homeCenter">
-      <img src="img/logo.png" alt="" class="main-logo" />
       <div class="h-content">
+        <img src="img/logo.png" alt="plastec" class="main-logo" />
         <h1>ПЛАСТЕХ</h1>
         <h5 class="uppercase">3-я международная специализированная выставка полимерных материалов, производственного оборудования и технологий изготовления пластиковой продукции</h5>
       </div>
