--- a/index.html
+++ b/index.html
@@ -37,16 +37,6 @@
         <li><a href="#map">Как добраться</a></li>
         <li><a href="#contact">Контакты</a></li>
       </ul>
-      <!--
-      <a href="#about">О выставке</a>
-      <a href="#sections">Разделы выставки</a>
-      <a href="#gallery">Фотогалерея</a>
-      <a href="#partners">Партнеры</a>
-      <a href="#participants">Участники</a>
-      <a href="#pricing">Стоимость участия</a>
-      <a href="#map">Как добраться</a>
-      <a href="#contact">Контакты</a>
-      -->
     </nav>
   </div>
   <div id="leftSide">
@@ -57,7 +47,7 @@
         <h5 class="uppercase">3-я международная специализированная выставка полимерных материалов, производственного оборудования и технологий изготовления пластиковой продукции</h5>
       </div>
       <ul class="social_icons">
-        <li><a href="https://www.facebook.com/plastec.expo/"><i class="icon ion-social-facebook"></i></a></li>
+        <li><a href="https://www.facebook.com/plastec.expo/" target="_blank"><i class="icon ion-social-facebook"></i></a></li>
       </ul>
       <div id="particles-js" class="gradient"></div>
     </div>
@@ -438,8 +428,8 @@
 
     <footer>
       <p class="uppercase">© 2019 <a href="https://expoforum.by/" target="_blank">Выставочное унитарное предприятие «Экспофорум»</a><br>СТБ ISO 9001-2015</p>
-      <div class="drag">
-        <i class="up ion-arrow-up-c"></i>
+      <div class="drag up">
+        <i class="ion-arrow-up-c"></i>
       </div>
     </footer>
 
@@ -516,7 +506,7 @@
 <script src="js/jqinstapics.min.js"></script>
 <script src="js/particles.min.js"></script>
 <script type="text/javascript">
-particlesJS("particles-js", {"particles":{"number":{"value":160,"density":{"enable":true,"value_area":800}},"color":{"value":"#ffffff"},"shape":{"type":"circle","stroke":{"width":0,"color":"#000000"},"polygon":{"nb_sides":5},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":1,"random":true,"anim":{"enable":true,"speed":1,"opacity_min":0,"sync":false}},"size":{"value":6,"random":true,"anim":{"enable":false,"speed":4,"size_min":0.3,"sync":false}},"line_linked":{"enable":false,"distance":150,"color":"#ffffff","opacity":0.4,"width":1},"move":{"enable":true,"speed":1,"direction":"none","random":true,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":600}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":false,"mode":"bubble"},"onclick":{"enable":false,"mode":"repulse"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},"bubble":{"distance":250,"size":0,"duration":2,"opacity":0,"speed":3},"repulse":{"distance":400,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});
+particlesJS("particles-js", {"particles":{"number":{"value":60,"density":{"enable":true,"value_area":800}},"color":{"value":"#ffffff"},"shape":{"type":"polygon","stroke":{"width":0,"color":"#000"},"polygon":{"nb_sides":6},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":0.3,"random":true,"anim":{"enable":true,"speed":0.3,"opacity_min":0,"sync":false}},"size":{"value":20,"random":true,"anim":{"enable":false,"speed":4,"size_min":0.3,"sync":false}},"line_linked":{"enable":true,"distance":150,"color":"#ffffff","opacity":0.1,"width":1},"move":{"enable":true,"speed":1,"direction":"none","random":true,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":600}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":false,"mode":"repulse"},"onclick":{"enable":false,"mode":"push"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},"bubble":{"distance":400,"size":40,"duration":2,"opacity":0.8,"speed":3},"repulse":{"distance":400,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});
 </script>
 <script src="js/script.js"></script>
 </body>
