--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="homeCenter">
       <div class="h-content">
         <img src="img/logo.png" alt="plastec" class="main-logo" />
-        <h1>ПЛАСТЕХ</h1>
+        <h1><img src="img/logo-name.png" alt="plastec" class="main-logo"></h1>
         <h5 class="uppercase">3-я международная специализированная выставка полимерных материалов, производственного оборудования и технологий изготовления пластиковой продукции</h5>
       </div>
       <ul class="social_icons">
